fixed image getting messed up on smaller screens

--- a/public/main.css
+++ b/public/main.css
@@ -20,4 +20,6 @@ p {
 img {
     margin:auto;
     display:block;
+    max-width: 100%;
+    height: auto;
 }
